--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "js-testing-exercise",
   "version": "1.0.0",
   "description": "node_modules/",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
